style.css
/** { cursor: default; }*/
body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: var(--font-main);
}
/* Agrega el fondo gris solo para páginas que NO sean contact-page */
body:not(.contact-page) {
    background: #fff;
}
.contact-page{
    background: url('./assets/img/bg-welcome.jpg') center center/cover no-repeat;
    background-attachment: scroll;
    min-height: 100vh;
}
:root {
    --color-bg: #fff;
    --color-primary: #7209b7;
    --color-secondary: #f70f77;
    --color-dark: #333333;
    --color-dark-2: #222222;
    --color-dark-3: #111111;
    --color-light: #f8f9fa;
    --font-main: 'Inter', 'Segoe UI', Arial, sans-serif;
}


.section__title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 0.7rem;
    margin: 0 auto;
    padding: 25px 30px;
    padding-top: 50px;
    max-width: 900px;
    width: 100%;
    transition: box-shadow 0.3s;
    box-sizing: border-box;
    opacity: 0;
    transform: translateY(40px);
    transition: opacity 1.5s cubic-bezier(.4, 0, .2, 1), transform 0.9s cubic-bezier(.4, 0, .2, 1);
}

.section__title.visible {
    opacity: 1;
    transform: translateY(0);
}

.section__title h2 {
    color: var(--color-secondary);
    font-size: 2.1rem;
    font-weight: 600;
    letter-spacing: 1px;
    margin: 0 0 0.2em 0;
    text-shadow: 0 2px 12px rgba(247, 37, 133, 0.08);
}

.section__title p {
    width: 100%;
    color: var(--color-dark-2);
    font-size: 1.4rem;
    font-weight: 400;
    letter-spacing: 1px;
    margin: 0;
    line-height: 1.3;

}

@media (max-width: 600px) {
    .section__title {
        padding: 25px 20px;
    }

    .section__title h2 {
        font-size: 1.8rem;
    }

    .section__title p {
        font-size: 1.2rem;
        font-weight: 300;
    }
}
/* Solo en desktop mantén el fondo fijo si quieres */
@media (min-width: 901px) {
    .contact-page {
        background-attachment: fixed;
    }
}

/* En móviles, usa scroll */
@media (max-width: 900px) {
    .contact-page {
        background-attachment: scroll;
    }
}
/************************************************************/
/***************Divider component***************************/
/************************************************************/






/*************************************************************************/
/****************** ====== NAVBAR RESPONSIVE ====== *********************/
/***********************************************************************/

/* ====== VARIABLES ====== */
:root {
    --color-nav-bg: #000000e2;
    /*--color-nav-bg-gradient: linear-gradient(90deg, var(--color-dark) 0%, #5a0792 100%);*/
    --color-nav-link: #fff;
    --color-nav-link-hover: var(--color-secondary);
    --color-social-bg: #e9ecef;
    --color-social-hover: var(--color-secondary);
    --nav-height: 70px;
    --nav-padding: 0px 25px;
    --transition: 0.3s cubic-bezier(.4, 0, .2, 1);
    --color-nav-menu-bg-movil: rgba(33, 33, 33, 0.8);
}

#main-nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: var(--nav-padding);
    background: var(--color-nav-bg);
    height: var(--nav-height);
    /*box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);*/
    position: fixed;
    top: 0;
    width: 100%;
    box-sizing: border-box;
    /* <-- importante */
    z-index: 2000;
    transition: height 0.3s cubic-bezier(.4, 0, .2, 1), padding 0.3s cubic-bezier(.4, 0, .2, 1);
}
.logo-nav__link{
    text-decoration: none;
}
.logo-nav {
    display: flex;
    align-items: center;
    gap: 10px;
}

.logo-nav img {
    height: 35px;
    width: 35px;
    border-radius: 0px;
    object-fit: cover;
}

.logo-nav span {
    font-size: 1.8rem;
    font-weight: 600;
    color: #fff;
    letter-spacing: 1px;
    font-family: var(--font-main);
}
/*======= LOGO NAVBAR sin sombra en el tap del movil ====== */
.logo-nav__link,
.logo-nav,
.logo-nav__link img,
.logo-nav__link span {
    -webkit-tap-highlight-color: transparent !important;
    outline: none !important;
    user-select: none;
    -webkit-user-select: none;
    -webkit-touch-callout: none;
    -webkit-tap-highlight-color: rgba(0,0,0,0) !important;
    -webkit-tap-highlight-color: transparent !important;
}
.logo-nav__link:focus,
.logo-nav__link:active {
    outline: none !important;
    -webkit-tap-highlight-color: transparent !important;
}




/* Oculta el logo grande del menú lateral en escritorio */
.logo-nav__menu {
    display: none;

}

/* ====== NAV LINKS ====== */
.nav-menu {
    display: flex;
    align-items: center;

}

.nav-menu__list {
    display: flex;
    list-style: none;
    gap: 6px;
}

.nav-menu__link {
    color: var(--color-nav-link);
    font-size: 1.1rem;
    font-weight: 500;
    padding: 5px 10px;
    border-radius: 4px;
    background: transparent;
    transition: background 0.18s, color 0.18s;
    text-decoration: none;
    position: relative;
    letter-spacing: 0px;
}

.nav-menu__link:hover,
.nav-menu__link:focus {
    color: var(--color-secondary);
}

.nav-menu__link.active,
.nav-menu__link:active {
    color: var(--color-secondary) !important;
    transition: background 0.18s, color 0.18s;
}

/* ====== SOCIAL LINKS ====== */
.nav-menu__social {
    display: none;
}

.nav-menu__social__desktop {
    display: flex;
    align-items: center;
    gap: 12px;
    margin-left: 16px;
}


.nav-menu__social-link {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background-color: var(--color-social-bg);
    color: var(--color-dark);
    transition: background var(--transition), color var(--transition);
}

.nav-menu__social-link:hover {
    background-color: var(--color-social-hover);

}

.nav-menu__social-link img {
    width: 22px;
    height: 22px;
}

.nav-menu__social-link:hover img {
    filter: brightness(0) invert(1);
    transition: filter 0.2s;
}
/* ... */

